--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Jenkins test for cypress 10",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "cypress:open": "cypress open"
   },
   "author": "Victor Adesanya",
   "license": "ISC",
